--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -3555,3 +3555,18 @@ canvas{
 }
 
 
+
+.cta-btn {
+  display: inline-block;
+  padding: 12px 24px;
+  color: #ffffff;
+  background-color: #fe750c;
+  text-decoration: none;
+  font-size: 16px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.cta-btn:hover {
+  background-color: #df6b13;
+}
