--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -170,7 +170,7 @@ h6 {
 # Sections & Section Header
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 20px 0;
   overflow: hidden;
 }
 
@@ -3136,7 +3136,7 @@ dl, ol, ul {
   width: 100%;
   padding: 10px 20px;
   height: 52px;
-  color: #fff;
+  color: #000000;
   border: none;
   border-radius: 8px;
   text-transform: capitalize;
@@ -3377,7 +3377,7 @@ canvas{
 }
 
 .single-cta i {
-  color: #c00113;
+  color: ##D75D0C;
   font-size: 30px;
   float: left;
   margin-top: 8px;
@@ -3389,7 +3389,7 @@ canvas{
 }
 
 .cta-text h4 {
-  color: #c00113;
+  color: ##D75D0C;
   font-size: 20px;
   font-weight: 500;
   margin-bottom: 2px;
@@ -3570,3 +3570,6 @@ canvas{
 .cta-btn:hover {
   background-color: #df6b13;
 }
+
+
+
