--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -1508,7 +1508,7 @@ section {background: var(--light-color);}
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
-.hero {
+/* .hero {
   width: 100%;
   position: relative;
   background: url(../images/hero-bg.png) center center;
@@ -1519,7 +1519,33 @@ section {background: var(--light-color);}
   display: flex;
   align-items: center;
   overflow: hidden;
+} */
+
+.hero {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
+  animation: bgCycle 30s infinite; /* Cycle through 3 images (10 seconds each) */
 }
+
+@keyframes bgCycle {
+  0%, 33.33% {
+    background: url(../images/hero-bg1.png) center center no-repeat;
+    background-size: cover;
+  }
+  33.34%, 66.66% {
+    background: url(../images/features.jpg) center center no-repeat;
+    background-size: cover;
+  }
+  66.67%, 100% {
+    background: url(../images/hero-bg.png) center center no-repeat;
+    background-size: cover;
+  }
+}
+
+
+
 .hero::before {
   content: '';
   position: absolute;
